internal/xds/translator/testdata/out/xds-ir/ratelimit.routes.yaml
- ignorePortInHostMatching: true
  name: first-listener
  virtualHosts:
  - domains:
    - '*'
    name: first-listener/*
    routes:
    - match:
        path: foo/bar
      name: first-route
      route:
        cluster: first-route-dest
        upgradeConfigs:
        - upgradeType: websocket
      typedPerFilterConfig:
        envoy.filters.http.ratelimit:
          '@type': type.googleapis.com/envoy.extensions.filters.http.ratelimit.v3.RateLimitPerRoute
          domain: first-listener
          rateLimits:
          - actions:
            - genericKey:
                descriptorKey: first-route
                descriptorValue: first-route
            - headerValueMatch:
                descriptorKey: rule-0-match-0
                descriptorValue: rule-0-match-0
                expectMatch: true
                headers:
                - name: x-user-id
                  stringMatch:
                    exact: one
    - match:
        path: example
      name: second-route
      route:
        cluster: second-route-dest
        upgradeConfigs:
        - upgradeType: websocket
      typedPerFilterConfig:
        envoy.filters.http.ratelimit:
          '@type': type.googleapis.com/envoy.extensions.filters.http.ratelimit.v3.RateLimitPerRoute
          domain: first-listener
          rateLimits:
          - actions:
            - genericKey:
                descriptorKey: second-route
                descriptorValue: second-route
            - requestHeaders:
                descriptorKey: rule-0-match-0
                headerName: x-user-id
    - match:
        path: test
      name: third-route
      route:
        cluster: third-route-dest
        upgradeConfigs:
        - upgradeType: websocket
      typedPerFilterConfig:
        envoy.filters.http.ratelimit:
          '@type': type.googleapis.com/envoy.extensions.filters.http.ratelimit.v3.RateLimitPerRoute
          domain: first-listener
          rateLimits:
          - actions:
            - genericKey:
                descriptorKey: third-route
                descriptorValue: third-route
            - genericKey:
                descriptorKey: rule-0-match--1
                descriptorValue: rule-0-match--1
    - match:
        path: foo/bar/login
      name: fourth-route
      route:
        cluster: fourth-route-dest
        upgradeConfigs:
        - upgradeType: websocket
      typedPerFilterConfig:
        envoy.filters.http.ratelimit:
          '@type': type.googleapis.com/envoy.extensions.filters.http.ratelimit.v3.RateLimitPerRoute
          domain: first-listener
          rateLimits:
          - actions:
            - genericKey:
                descriptorKey: fourth-route
                descriptorValue: fourth-route
            - headerValueMatch:
                descriptorKey: rule-0-match-0
                descriptorValue: rule-0-match-0
                expectMatch: false
                headers:
                - name: x-org-id
                  stringMatch:
                    exact: admin
    - match:
        path: foo/bar
      name: req-and-resp-cost
      route:
        cluster: first-route-dest
        upgradeConfigs:
        - upgradeType: websocket
      typedPerFilterConfig:
        envoy.filters.http.ratelimit:
          '@type': type.googleapis.com/envoy.extensions.filters.http.ratelimit.v3.RateLimitPerRoute
          domain: first-listener
          rateLimits:
          - actions:
            - genericKey:
                descriptorKey: req-and-resp-cost
                descriptorValue: req-and-resp-cost
            - headerValueMatch:
                descriptorKey: rule-0-match-0
                descriptorValue: rule-0-match-0
                expectMatch: true
                headers:
                - name: x-user-id
                  stringMatch:
                    exact: one
            hitsAddend:
              number: "12345"
            limit:
              dynamicMetadata:
                metadataKey:
                  key: envoy.lb
                  path:
                  - key: tenant_rate_limit
          - actions:
            - genericKey:
                descriptorKey: req-and-resp-cost
                descriptorValue: req-and-resp-cost
            - headerValueMatch:
                descriptorKey: rule-0-match-0
                descriptorValue: rule-0-match-0
                expectMatch: true
                headers:
                - name: x-user-id
                  stringMatch:
                    exact: one
            applyOnStreamDone: true
            hitsAddend:
              format: '%DYNAMIC_METADATA(something.com:key)%'
            limit:
              dynamicMetadata:
                metadataKey:
                  key: envoy.lb
                  path:
                  - key: tenant_rate_limit
    - match:
        path: test
      name: req-cost
      route:
        cluster: third-route-dest
        upgradeConfigs:
        - upgradeType: websocket
      typedPerFilterConfig:
        envoy.filters.http.ratelimit:
          '@type': type.googleapis.com/envoy.extensions.filters.http.ratelimit.v3.RateLimitPerRoute
          domain: first-listener
          rateLimits:
          - actions:
            - genericKey:
                descriptorKey: req-cost
                descriptorValue: req-cost
            - genericKey:
                descriptorKey: rule-0-match--1
                descriptorValue: rule-0-match--1
            hitsAddend:
              number: "12345"
    - match:
        path: foo/bar/login
      name: res-cost
      route:
        cluster: fourth-route-dest
        upgradeConfigs:
        - upgradeType: websocket
      typedPerFilterConfig:
        envoy.filters.http.ratelimit:
          '@type': type.googleapis.com/envoy.extensions.filters.http.ratelimit.v3.RateLimitPerRoute
          domain: first-listener
          rateLimits:
          - actions:
            - genericKey:
                descriptorKey: res-cost
                descriptorValue: res-cost
            - headerValueMatch:
                descriptorKey: rule-0-match-0
                descriptorValue: rule-0-match-0
                expectMatch: false
                headers:
                - name: x-org-id
                  stringMatch:
                    exact: admin
          - actions:
            - genericKey:
                descriptorKey: res-cost
                descriptorValue: res-cost
            - headerValueMatch:
                descriptorKey: rule-0-match-0
                descriptorValue: rule-0-match-0
                expectMatch: false
                headers:
                - name: x-org-id
                  stringMatch:
                    exact: admin
            applyOnStreamDone: true
            hitsAddend:
              format: '%DYNAMIC_METADATA(something.com:key)%'
    - match:
        path: foo/bar/limit-from-metadata
      name: limit-from-metadata
      route:
        cluster: fifth-route-dest
        upgradeConfigs:
        - upgradeType: websocket
      typedPerFilterConfig:
        envoy.filters.http.ratelimit:
          '@type': type.googleapis.com/envoy.extensions.filters.http.ratelimit.v3.RateLimitPerRoute
          domain: first-listener
          rateLimits:
          - actions:
            - genericKey:
                descriptorKey: limit-from-metadata
                descriptorValue: limit-from-metadata
            - headerValueMatch:
                descriptorKey: rule-0-match-0
                descriptorValue: rule-0-match-0
                expectMatch: true
                headers:
                - name: x-tenant-id
                  stringMatch:
                    exact: one
            limit:
              dynamicMetadata:
                metadataKey:
                  key: envoy.lb
                  path:
                  - key: tenant_rate_limit
